--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,26 @@
 *{
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     background-color: rgba(0, 0, 0, 0.9);
+    color: rgb(219, 198, 198);
+}
+
+.card{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+   
+}
+.card{
+    width: 80%;
+    max-width: 200px;
+    max-height: 300px;
+    margin: 1rem;
+    border: 1px solid white;
+    border-radius: 4%;
+    gap: 2rem;
+    background-color: cornflowerblue;
+    color:rgb(219, 198, 198);
+    text-align: center;
+    
 }
