--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,11 @@ h1{
     text-align: center; 
     margin-bottom: 3rem;
 }
+h2{
+    text-align: center;
+    font-size: 2.5em;
+    padding: 1rem;
+}
 #alumnosCards{
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -52,13 +57,18 @@ h1{
     color:#D9D9D9;
 }
 
-
+.seccionBuscadores{
+    display: flex;
+    flex-direction: row;
+}
 .formRegistro{
-    width: 500px;
+    width: 1000px;
     padding: 3rem;
     margin: auto;
     background-color: #373339e5;
     border-radius: 4px;
+    display: flex;
+    flex-direction: row;
 }
 
 h4{
@@ -67,6 +77,21 @@ h4{
     color: #373339e5;
     text-align: center; 
     margin-top: 2rem;
+}
+.tituloBuscar{
+    color: #D9D9D9;
+}
+.parrafoInicio{
+    font-size: 1.5em;
+    text-align: justify;
+    width: 70%;
+    margin: auto;
+    padding: 2rem;
+}
+.enlaceEscuelita{
+    text-decoration: none;
+    color: #373339e5;
+
 }
 .controles{
     width: 100%;
@@ -82,12 +107,23 @@ h4{
 .controlesImputs{
     display: flex;
     flex-direction: column;
+    width: 40%;
 }
 
+.controlesBotones{
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    margin: 3rem;
+    justify-content: center;
+    align-items: center;
+}
 .controlesBotones .boton{
     display: flex;
     flex-direction: column;
     background: #f7a2a1;
+    width: 40%;
+    margin: 3rem;
 }
 .formRegistro .boton{
     background: hsla(0, 87%, 79%, 1);
@@ -103,6 +139,9 @@ h4{
     font-size: 1.5em;
 }
 .buscadorRegistro{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 500px;
     padding: 3rem;
     margin: auto;
@@ -224,12 +263,16 @@ footer{
 }
 
 .seccionReloj{
-    
+    background: hsla(0, 87%, 79%, 1);
+    background: linear-gradient(90deg, hsla(0, 87%, 79%, 1) 0%, hsla(6, 77%, 85%, 1) 100%);
+    background: -moz-linear-gradient(90deg, hsla(0, 87%, 79%, 1) 0%, hsla(6, 77%, 85%, 1) 100%);
+    background: -webkit-linear-gradient(90deg, hsla(0, 87%, 79%, 1) 0%, hsla(6, 77%, 85%, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#F89999", endColorstr="#F6C0BA", GradientType=1 );
     width: 100%;
-    height: 100%;
+    height: 20%;
     display: flex;
     justify-content: center;
-    margin: 2rem;
+    /* margin: 2rem; */
 }
 .reloj{
    display: inline-block;
@@ -241,4 +284,8 @@ footer{
    border-radius: 4px;
    margin: 0.5rem;
    padding: 0.5rem;
+}
+.redes__img{
+    height:75px;
+    margin: 1.5rem;
 }
